<resources>
    <string name="app_label">REDLAND</string>
    <string name="app_home_title">Conversor Energético</string>
    <string name="app_name">Convertidor de Energía</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Global Red Land</string>
    <string name="nav_header_subtitle">contacto@globalredland.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Nosotros</string>
    <string name="menu_slideshow">Tutorial</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_converter">Conversor de Unidades</string>
    <string name="menu_equivalente">Equivalente Energético</string>
    <string name="menu_about">Acerca de</string>

    <string name="home_button_convert">Convertir unidades</string>
    <string name="home_button_equivalent">Equivalente energético</string>

    <string name="home_text_choose1">Selecciona</string>
    <string name="home_text_choose2">lo que necesitas</string>
    <string name="home_text_choose3">CONVERSOR</string>
    <string name="home_text_choose4">ENERGÉTICO</string>

    <string name="convert_button">Convertir Unidades</string>

    <string name="converter">Convertir unidades</string>
    <string name="converter_results">TU RESULTADO</string>
    <string name="converter_units">Cantidad a convertir</string>
    <string name="converter_units_hint"><font size="18">Cantidad</font></string>
    <string name="converter_fuels_choose">Elige el producto</string>
    <string name="converter_units_choose">Elige la unidad</string>
    <string name="converter_button_text">Convertir</string>
    <string name="converter_button_delete">Borrar datos</string>
    <string name="equivalente_fuels_choose_from">Elige el producto que quieres convertir</string>
    <string name="equivalente_fuels_choose_to">Elige el sustituto energético</string>
    <string name="equivalente_button_text">Calcular</string>

    <string name="equivalente">Equivalente energético</string>
    <string name="equivalente_fuels_from">Elige el combustible de...</string>
    <string name="equivalente_fuels_to">Elige el combustible a...</string>

    <string name="our_team_title">REDLAND</string>
    <string name="our_team_subtitle">Energy Project Developers</string>
    <string name="our_team">NOSOTROS</string>
    <string name="our_team_description_one">Somos una empresa conformada por ingenieros, economistas, profesionales del derecho y la regulación energética, con amplia experiencia en el extenso campo de la energía, con integridad, solidos valores y un elevado compromiso en el desarrollo de cada proyecto en el que participamos.</string>
    <string name="our_team_description_two">Desarrollamos Proyectos de Infraestructura de Gas, petróleo y energía, desde su visualización hasta su puesta en marcha, proyectos de Oleoductos, Gasoductos, Redes de gas, Plantas de proceso y almacenamiento de líquidos, plantas de GNL (SSLNG), GNC, GLP.</string>
    <string name="our_team_mail">contacto@globalredland.com</string>
    <string name="our_team_phone_peru">Perú: +51 996 685 048</string>
    <string name="our_team_phone_argentina">Argentina: +54 911 4557 4299</string>
    <string name="our_team_clock">Horario completo</string>

    <string name="visit_site"><a href="https://globalredland.com/">Sitio web Global Redland</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
