<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_converter"
        android:icon="@drawable/ic_menu_converter"
        android:title="@string/menu_converter" />
    <item
        android:id="@+id/nav_equivalente"
        android:icon="@drawable/ic_menu_equivalent"
        android:title="@string/menu_equivalente" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_our_team"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_slideshow" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_about" />

</menu>
