<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_white"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/our_team" />

            <LinearLayout
                android:id="@+id/our_team_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_card"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="15dp"
                    android:text="@string/our_team_title"
                    android:textColor="@color/text_white"
                    android:textSize="22sp"
                    tools:layout_editor_absoluteX="333dp"
                    tools:layout_editor_absoluteY="211dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingBottom="15dp"
                    android:text="@string/our_team_subtitle"
                    android:textColor="@color/text_white"
                    android:textSize="22sp"
                    tools:layout_editor_absoluteX="211dp"
                    tools:layout_editor_absoluteY="249dp" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="110dp"
                android:layout_height="3dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView2" />

            <LinearLayout
                android:id="@+id/our_team_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/our_team"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/our_team_description_one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/our_team_description_two"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/LinearLayout_our_team_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="Contactenos"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/our_team_description" />

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_contact">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/our_team_mail"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_telephone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_mail">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_telephone" />

                <LinearLayout
                    android:id="@+id/LinearLayout_our_team_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/our_team_phone_peru"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/our_team_phone_argentina"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_telephone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/our_team_clock"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_clock"
                tools:layout_editor_absoluteX="25dp">

                <TextView
                    android:id="@+id/txtLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/visit_site"
                    android:textAlignment="center"
                    android:textColor="@color/text_red" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>