<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fontFamily="@font/poppins"
            android:singleLine="false"
            android:text="@string/app_home_title"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_box">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_unit_converter"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/round_button"
                    android:drawableStart="@drawable/ic_home_convert"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:paddingLeft="30dp"
                    android:text="@string/home_button_convert"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/home_buttons_text"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button_unit_equivalent"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/round_button"
                    android:drawableStart="@drawable/ic_home_equivalent"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:lineSpacingExtra="-10sp"
                    android:paddingLeft="25dp"
                    android:text="@string/home_button_equivalent"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/home_buttons_text"
                    android:textSize="22sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>