<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_converter"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/converter"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/converter_units"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/text_circle"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:hint="@string/converter_units_hint"
                        android:inputType="number"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:textColor="#000000"
                        android:imeOptions="actionDone"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <Spinner
                            android:id="@+id/spinner_fuel"
                            android:layout_width="fill_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/round_select_disable"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="15dp"
                            android:spinnerMode="dialog" />

                        <Spinner
                            android:id="@+id/spinner_units_from"
                            android:layout_width="fill_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/round_select_disable"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="15dp"
                            android:spinnerMode="dialog" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_box">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppins"
                        android:text="Resultado"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_units_to"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/text_circle"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:text="---"
                        android:textColor="@color/colorDisable"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <Spinner
                            android:id="@+id/spinner_units_to"
                            android:layout_width="fill_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/round_select_disable"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="15dp"
                            android:spinnerMode="dialog" />

                        <Button
                            android:id="@+id/converter_button"
                            android:layout_width="fill_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/round_button"
                            android:fontFamily="@font/poppins"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="15dp"
                            android:text="@string/converter_button_text"
                            android:textColor="@color/text_white"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/button_delete_data"
                            android:layout_width="fill_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/round_button"
                            android:fontFamily="@font/poppins"
                            android:paddingLeft="20dp"
                            android:paddingTop="15dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="15dp"
                            android:text="@string/converter_button_delete"
                            android:textColor="@color/text_white"
                            android:textSize="20sp" />



                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>